[package]
name = "conhash"
version = "0.3.3"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]
description = "Consistent Hashing library in Rust"
repository = "https://github.com/zonyitoo/conhash-rs"
keywords = ["consistent", "hash", "cache"]
license = "MIT/Apache-2.0"

[lib]
name = "conhash"

[dependencies]
rust-crypto = "0.2"
log = "0.4"

[dev-dependencies]
env_logger = "0.4"
