[package]
name = "conhash"
version = "0.5.1"
edition = "2021"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]
description = "Consistent Hashing library in Rust"
repository = "https://github.com/zonyitoo/conhash-rs"
keywords = ["consistent", "hash", "cache"]
license = "MIT/Apache-2.0"

[lib]
name = "conhash"

[dependencies]
md5 = "0.7"
log = "0.4"

[dev-dependencies]
criterion = "0.3"
once_cell = "1.9.0"

[[bench]]
name = "my_benchmark"
harness = false
